Cloud-native_Development_with_OpenShift_and_Kubernettes_Red_Hat/Managing_Cloud-native_Applications_with_Kubernetes/ingress-hello.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  labels:
    app: hello
spec:
  rules:
    - host: hello.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  number: 8080
